# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "plush"
version = "0.1.0"
authors = ["Maxime Chevalier-Boisvert <maximechevalierb@gmail.com>"]
edition = "2018" # Rust language edition
repository = "https://github.com/maximecb/plush/"

[dependencies]

[[bin]]
name = "plush"
path = "main.rs"
